[tool.poetry]
name = "llm-zoomcamp"
version = "0.1.0"
description = ""
authors = ["RArielAlonso <rariel.alonso@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tqdm = "^4.66.4"
notebook = "7.1.2"
openai = "^1.35.7"
elasticsearch = "^8.14.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
ipywidgets = "^8.1.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
groq = "^0.9.0"
tiktoken = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
